--- a/PG2/Presentacion/styles.css
+++ b/PG2/Presentacion/styles.css
@@ -102,3 +102,16 @@ div#graph02 {
 .MathJax_Display {
     font-size: 19px;
 }
+
+
+div#thirdGraph {
+    margin: auto;
+    width: 482px;
+    margin-top: -136px;
+    margin-right: -15px;
+}
+
+article#conclusiones li {
+    margin-bottom: 35px;
+    margin-top: 18px;
+}
